remove red code, add equip

--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "populate": "node ./populate/populate.js",
+    "equip": "node ./equip/equip.js",
     "format": "prettier -w ."
   },
   "keywords": [],
